--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test": "mocha --require should --reporter spec"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "nohup": "^0.1.0",
     "pm2": "^4.2.3"
   }
